// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadActivityGraph matches the 2d canvas draw snapshot 1`] = `
Array [
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -0.4,
    0,
    0.8,
    0,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -5,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    5,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    15,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    25,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    35,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    45,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    55,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    65,
    0,
    10,
    10,
  ],
  Array [
    "clearRect",
    0,
    0,
    80,
    10,
  ],
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "scale",
    1,
    1,
  ],
]
`;

exports[`ThreadActivityGraph matches the 2d canvas draw snapshot with CPU values 1`] = `
Array [
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -0.4,
    0,
    0.8,
    0,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -5,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    5,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    15,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    25,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    35,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    45,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    55,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    65,
    0,
    10,
    10,
  ],
  Array [
    "clearRect",
    0,
    0,
    80,
    10,
  ],
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "scale",
    1,
    1,
  ],
]
`;

exports[`ThreadActivityGraph matches the 2d canvas draw snapshot with CPU values with missing samples 1`] = `
Array [
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -0.4,
    0,
    0.8,
    0,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -3.3333333333333335,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    3.3333333333333335,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    10,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    43.333333333333336,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    50,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    56.666666666666664,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    63.333333333333336,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    70.00000000000001,
    0,
    6.666666666666667,
    10,
  ],
  Array [
    "clearRect",
    0,
    0,
    80,
    10,
  ],
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "scale",
    1,
    1,
  ],
]
`;

exports[`ThreadActivityGraph matches the 2d canvas draw snapshot with only one CPU usage value 1`] = `
Array [
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -0.4,
    0,
    0.8,
    0,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    -5,
    0,
    10,
    10,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    35,
    0,
    10,
    10,
  ],
  Array [
    "clearRect",
    0,
    0,
    80,
    10,
  ],
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "set fillStyle",
    "#003eaa",
  ],
  Array [
    "fillRect",
    32.89473684210527,
    0,
    10,
    10,
  ],
]
`;

exports[`ThreadActivityGraph matches the component snapshot 1`] = `
<div
  class="timelineTrackThread expanded"
>
  <div
    class="timelineMarkers selected"
    data-testid="TimelineMarkersJank"
  >
    <div
      class="react-contextmenu-wrapper"
    >
      <canvas
        class="timelineMarkersCanvas"
        height="10"
        width="80"
      />
    </div>
  </div>
  <div
    class="threadActivityGraph"
  >
    <div>
      <canvas
        class="threadActivityGraphCanvas threadActivityGraphCanvas"
      >
        <h2>
          Activity Graph for 
          Test Track
        </h2>
        <p>
          This graph shows a visual chart of thread activity.
        </p>
      </canvas>
    </div>
  </div>
  <div
    class="threadSampleGraph"
  >
    <canvas
      class="threadSampleGraphCanvas threadSampleGraphCanvas"
      height="10"
      width="80"
    >
      <h2>
        Stack Graph for 
        Test Track
      </h2>
      <p>
        This graph charts the stack height of each sample.
      </p>
    </canvas>
  </div>
  <div
    class="timelineEmptyThreadIndicator"
  />
</div>
`;
